updated Hungarian locale json files
ref #23361

Added more translations to Hungarian, to make UI nicer for customers from Hungary.

--- a/ghost/i18n/locales/hu/comments.json
+++ b/ghost/i18n/locales/hu/comments.json
@@ -8,13 +8,13 @@
     "Add comment": "Hozzászólás",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Segítsd a beszélgetést azzal, hogy megadod a nevedet és azt, hogy mihez értesz.",
     "Add reply": "Válasz",
-    "Add your expertise": "",
+    "Add your expertise": "Add meg a szakterületedet",
     "Already a member?": "Van már fiókod?",
     "Anonymous": "Anonim",
     "Are you sure?": "Biztos vagy benne?",
-    "Become a member of {publication} to start commenting.": "Hozzászólást csak tagok írhatnak.",
-    "Become a paid member of {publication} to start commenting.": "Hozzászólást csak előfizetők írhatnak.",
-    "Best": "",
+    "Become a member of {publication} to start commenting.": "Csatlakozz a {publication} közösséghez, hogy hozzászólhass a tartalmakhoz.",
+    "Become a paid member of {publication} to start commenting.": "Csatlakozz a fizető {publication} közösséghez, hogy hozzászólhass a tartalmakhoz.",
+    "Best": "Legjobb",
     "Cancel": "Mégse",
     "Comment": "Hozzászólás",
     "Complete your profile": "Profil befejezése",
@@ -37,17 +37,17 @@
     "Jamie Larson": "Kiss Sára",
     "Join the discussion": "Csatlakozz a beszélgetéshez",
     "Just now": "Épp most",
-    "Load more ({amount})": "",
+    "Load more ({amount})": "Továbbiak betöltése ({amount})",
     "Local resident": "Helyi lakos",
     "Member discussion": "Tagok beszélgetése",
     "Name": "Név",
     "Neurosurgeon": "Idegsebész",
-    "Newest": "",
-    "Oldest": "",
+    "Newest": "Legújabb",
+    "Oldest": "Legrégebbi",
     "Once deleted, this comment can’t be recovered.": "A törlés után ez a hozzászólás nem állítható vissza.",
     "One hour ago": "Egy órája",
     "One min ago": "Egy perce",
-    "removed": "",
+    "removed": "eltávolítva",
     "Replied to": "Válaszolt erre",
     "Reply": "Válasz",
     "Reply to": "Válasz",
