--- a/ghost/i18n/locales/hu/ghost.json
+++ b/ghost/i18n/locales/hu/ghost.json
@@ -1,7 +1,7 @@
 {
     "{date}": "{date}",
     "All the best!": "Üdvözlettel,",
-    "Become a paid member of {site} to get access to all premium content.": "",
+    "Become a paid member of {site} to get access to all premium content.": "Legyél fizető tag {site} oldalon, hogy hozzáférj minden prémium tartalomhoz.",
     "By {authors}": "{authors}",
     "Comment": "Hozzászólás",
     "Complete signup for {siteTitle}!": "{siteTitle} —\u00a0Erősítsd meg a feliratkozásodat a hírlevélre!",
@@ -12,17 +12,17 @@
     "Confirm your email address": "Kérjük, erősítsd meg az e-mail-címed!",
     "Confirm your email update for {siteTitle}!": "{siteTitle} — E-mail-cím módosításának megerősítése",
     "Confirm your subscription to {siteTitle}": "{siteTitle} — Előfizetés jóváhagyása",
-    "Device:": "",
+    "Device:": "Eszköz:",
     "Email": "E-mail",
-    "For security verification, enter the code below to sign in to {siteTitle}:": "",
+    "For security verification, enter the code below to sign in to {siteTitle}:": "Biztonsági ellenőrzéshez add meg az alábbi kódot, és jelentkezz be {siteTitle} oldalon:",
     "For your security, the link will expire in 24 hours time.": "Biztonsági okokból a link 24 órán belül érvénytelenné válik.",
     "free": "ingyenes",
-    "Here's your code to login to {siteTitle}": "",
+    "Here's your code to login to {siteTitle}": "Ez a bejelentkezési kódod {siteTitle} oldalhoz:",
     "Hey there,": "Szia!",
     "Hey there!": "Szia!",
     "If you did not make this request, you can safely ignore this email.": "Ha nem te kezdeményezted ezt a kérést, akkor nyugodtan hagyd figyelmen kívül ezt a levelet.",
     "If you did not make this request, you can simply delete this message.": "Ha nem te kezdeményezted ezt a kérést, nyugodtan töröld ezt a levelet.",
-    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "",
+    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "Ha nem próbáltál meg bejelentkezni, nyugodtan hagyd figyelmen kívül ezt az e-mailt, és ezzel megtagadod a hozzáférést.",
     "Keep reading": "Olvasd tovább",
     "Less like this": "Kevesebb hasonló",
     "Manage subscription": "Előfizetés kezelése",
@@ -36,9 +36,9 @@
     "Sent to {email}": "Elküldve ide: {email}",
     "Sign in": "Bejelentkezés",
     "Sign in to {siteTitle}": "Bejelentkezem ide: {siteTitle}",
-    "Sign in verification": "",
+    "Sign in verification": "Bejelentkezési ellenőrzés",
     "Subscription details": "Előfizetés részletei",
-    "Tap the link below to complete the signup process for {siteTitle}, and be automatically signed in:": "Kattints az alábbi linkre a regisztráció befejezéséhez és az automatikus bejelentkezéshez:",
+    "Tap the link below to complete the signup process for {siteTitle}, and be automatically signed in:": "Kattints az alábbi linkre a regisztráció befejezéséhez {siteTitle} oldalnál és az automatikus bejelentkezéshez:",
     "Thank you for signing up to {siteTitle}!": "{siteTitle} — Köszönjük a regisztrációt!",
     "Thank you for subscribing to {siteTitle}!": "{siteTitle} — Köszönjük a feliratkozást!",
     "Thank you for subscribing to {siteTitle}.": "{siteTitle} — Köszönjük a feliratkozást!",
@@ -46,24 +46,24 @@
     "This email address will not be used.": "Ezt az e-mail-címet nem használjuk fel.",
     "trialing": "próbaidőszak alatt",
     "Unsubscribe": "Leiratkozás",
-    "Upgrade": "",
-    "Upgrade to continue reading.": "",
+    "Upgrade": "Csomagváltás",
+    "Upgrade to continue reading.": "A továbbolvasáshoz válts nagyobb csomagra.",
     "View in browser": "Megnyitás a böngészőben",
     "Welcome back to {siteTitle}!": "{siteTitle} - Üdv újra!",
-    "Welcome back! Use this link to securely sign in to your {siteTitle} account:": "Jó, hogy újra itt vagy! Kérjük, használd az alábbi linket a biztonságos bejelentkezéshez:",
-    "When:": "",
-    "Where:": "",
+    "Welcome back! Use this link to securely sign in to your {siteTitle} account:": "Jó, hogy újra itt vagy! Kérjük, használd az alábbi linket, hogy biztonságosan bejelentkezz {siteTitle} fiókodba:",
+    "When:": "Mikor:",
+    "Where:": "Hol:",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Ezt azért kapod, mert <strong>%%{status}%% előfizető</strong> vagy itt: {site}",
     "You can also copy & paste this URL into your browser:": "Ha elakadnál, másold át és nyisd meg az alábbi linket a böngésződben:",
-    "You just tried to access your account from a new device.": "",
+    "You just tried to access your account from a new device.": "Új eszközről próbáltál bejelentkezni a fiókodba.",
     "You will not be signed up, and no account will be created for you.": "Nem leszel regisztrálva és saját fiók sem készül neked.",
     "You will not be subscribed.": "Nem leszel feliratkozva.",
-    "You're one tap away from subscribing to {siteTitle} — please confirm your email address with this link:": "Csak egy kattintásra vagy a feliratkozástól! Kérjük, hagyd jóvá az e-mail-címed az alábbi linkkel:",
+    "You're one tap away from subscribing to {siteTitle} — please confirm your email address with this link:": "Csak egy kattintásra vagy a feliratkozástól {siteTitle} oldalra! Kérjük, hagyd jóvá az e-mail-címed az alábbi linkkel:",
     "You're one tap away from subscribing to {siteTitle}!": "{siteTitle} — Csak egy kattintásra vagy a feliratkozástól!",
     "Your free trial ends on {date}, at which time you will be charged the regular price. You can always cancel before then.": "Az ingyenes próbaidőszak után {date} fiókod automatikusan átvált előfizetésesre. A próbaidőszak alatt bármikor lemondhatod az előfizetésedet.",
     "Your subscription has been canceled and will expire on {date}. You can resume your subscription via your account settings.": "Az előfizetésed törölve lesz és lejár ekkor: {date}. A fiókodban beállíthatod az előfizetésed folytatását.",
     "Your subscription has expired.": "Az előfizetésed lejárt.",
     "Your subscription will expire on {date}.": "Az előfizetésed ekkor fog lejárni: {date}. ",
     "Your subscription will renew on {date}.": "Az előfizetésed ekkor fog megújulni: {date}.",
-    "Your verification code for {siteTitle}": ""
+    "Your verification code for {siteTitle}": "Ellenőrző kódod {siteTitle} oldalhoz"
 }
