--- a/ghost/i18n/locales/hu/portal.json
+++ b/ghost/i18n/locales/hu/portal.json
@@ -15,7 +15,7 @@
     "Account": "Fiók",
     "Account details updated successfully": "A fiók adatai sikeresen frissültek.",
     "Account settings": "Fiók beállítások",
-    "Add a personal note": "",
+    "Add a personal note": "Adj hozzá személyes megjegyzést",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Az ingyenes próbaidőszak lejárta után a kiválasztott csomag normál díját fogjuk felszámolni. A próbaidőszak alatt bármikor lemondhatod az előfizetésedet.",
     "Already a member?": "Már tag vagy?",
     "An error occurred": "Hiba történt.",
@@ -38,7 +38,7 @@
     "Choose your newsletters": "Válaszd ki a hírleveleidet",
     "Click here to retry": "Kattints ide az újrapróbálkozáshoz",
     "Close": "Bezár",
-    "Comment preferences updated.": "",
+    "Comment preferences updated.": "Hozzászólási beállítások frissítve.",
     "Comments": "Hozzászólások",
     "Complimentary": "Ajándék",
     "Confirm": "Jóváhagyás",
@@ -60,7 +60,7 @@
     "Email newsletter": "Hírlevél",
     "Email newsletter settings updated": "A hírlevél beállításaid frissültek.",
     "Email preferences": "E-mail beállítások",
-    "Email preferences updated.": "",
+    "Email preferences updated.": "E-mail beállítások frissítve.",
     "Emails": "E-mailek",
     "Emails disabled": "E-mailek kikapcsolva",
     "Ends {offerEndDate}": "Ajánlat vége: {offerEndDate}",
@@ -104,7 +104,7 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Győződj meg róla, hogy az e-mailek véletlenül nem kerülnek-e a Spam vagy Promóciók mappába az e-mail-fiókodban. Ha ez történik, kattints a 'Nem spam' és/vagy az 'Áthelyezés a Beérkezők közé' lehetőségekre.",
     "Manage": "Kezelés",
     "Maybe later": "Talán később",
-    "Memberships from this email domain are currently restricted.": "",
+    "Memberships from this email domain are currently restricted.": "Ehhez az e-mail domainhez tartozó regisztráció jelenleg korlátozott.",
     "Memberships unavailable, contact the owner for access.": "A feliratkozás nem elérhető! Kérjük, lépj kapcsolatba a weboldal tulajdonosával a hozzáférésért.",
     "month": "hónap",
     "Monthly": "Havi",
@@ -123,7 +123,7 @@
     "Plan checkout was cancelled.": "A csomag fizetési tranzakciója törölve lett",
     "Plan upgrade was cancelled.": "A csomag frissítése törölve lett",
     "Please contact {supportAddress} to adjust your complimentary subscription.": "Az ingyenes (ajándék) csomagod módosításáért kérjük, lépj velünk kapcsolatba az alábbi e-mail-címen: {supportAddress}",
-    "Please enter {fieldName}": "Kérjük, add meg a hiányzó adatokat",
+    "Please enter {fieldName}": "Kérjük, add meg {fieldName}",
     "Please fill in required fields": "Kérjük, töltsd ki az összes mezőt",
     "Price": "Ár",
     "Re-enable emails": "E-mailek aktiválása",
@@ -140,7 +140,7 @@
     "Sign out": "Kijelentkezés",
     "Sign up": "Regisztráció",
     "Signup error: Invalid link": "Regisztrációs hiba: érvénytelen link",
-    "Signups from this email domain are currently restricted.": "",
+    "Signups from this email domain are currently restricted.": "Ehhez az e-mail domainhez tartozó regisztráció jelenleg nem engedélyezett.",
     "Something went wrong, please try again later.": "Valami nem sikerült. Kérjük, próbáld újra.",
     "Sorry, no recommendations are available right now.": "Sajnáljuk, de az ajánlott oldalak most nem elérhetőek.",
     "Sorry, that didn’t work.": "Sajnáljuk, ez nem működött.",
@@ -169,9 +169,9 @@
     "There was an error processing your payment. Please try again.": "Hiba történt a fizetési folyamatnál. Kérjük, próbáld újra.",
     "There was an error sending the email, please try again": "Hiba történt az e-mail küldésénél. Kérjük, próbáld újra.",
     "This site is invite-only, contact the owner for access.": "A weboldal csak meghívóval látogatható. Meghívóért lépj kapcsolatba a weboldal tulajdonosával.",
-    "This site is not accepting donations at the moment.": "",
+    "This site is not accepting donations at the moment.": "Ez az oldal jelenleg nem fogad adományokat.",
     "This site is not accepting payments at the moment.": "A weboldal jelenleg nem fogad el fizetést.",
-    "This site only accepts paid members.": "",
+    "This site only accepts paid members.": "Ez az oldal csak fizetős tagokat fogad.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "A regisztráció befejezéséhez kérjük, kattints az e-mailben kapott linkre. Ha a link nem érkezik meg 3 percen belül, kérjük, ellenőrizd a spam mappát.",
     "To continue to stay up to date, subscribe to {publication} below.": "Ha a jövőben is naprakész szeretnél lenni, iratkozz fel ide {publication}",
     "Too many attempts try again in {number} days.": "Túl sok próbálkozás történt. Próbáld meg ennyi nap múlva újra: {number}",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} days": "Túl sok, különböző bejelentkezési kísérlet történt, próbáld meg újra ennyi nap múlva: {number}",
     "Too many different sign-in attempts, try again in {number} hours": "Túl sok, különböző bejelentkezési kísérlet történt, próbáld meg újra ennyi óra múlva: {number}",
     "Too many different sign-in attempts, try again in {number} minutes": "Túl sok, különböző bejelentkezési kísérlet történt, próbáld meg újra ennyi perc múlva: {number}",
-    "Too many sign-up attempts, try again later": "",
+    "Too many sign-up attempts, try again later": "Túl sok regisztrációs próbálkozás, próbáld meg később újra.",
     "Try free for {amount} days, then {originalPrice}.": "Próbáld ki ingyen {amount} napig, utána {originalPrice}",
     "Unable to initiate checkout session": "Nem sikerült elindítani a fizetési munkamenetet",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Előfizetéssel az összes hírlevélhez hozzáférsz.",
