--- a/ghost/i18n/locales/hu/ghost.json
+++ b/ghost/i18n/locales/hu/ghost.json
@@ -14,10 +14,10 @@
     "Confirm your subscription to {siteTitle}": "{siteTitle} — Előfizetés jóváhagyása",
     "Device:": "Eszköz:",
     "Email": "E-mail",
-    "For security verification, enter the code below to sign in to {siteTitle}:": "Biztonsági ellenőrzéshez add meg az alábbi kódot, és jelentkezz be {siteTitle} oldalon:",
+    "For security verification, enter the code below to sign in to {siteTitle}:": "Biztonsági ellenőrzéshez add meg az alábbi kódot, és jelentkezz be {siteTitle} oldalra:",
     "For your security, the link will expire in 24 hours time.": "Biztonsági okokból a link 24 órán belül érvénytelenné válik.",
     "free": "ingyenes",
-    "Here's your code to login to {siteTitle}": "Ez a bejelentkezési kódod {siteTitle} oldalhoz:",
+    "Here's your code to login to {siteTitle}": "Ez a bejelentkezési kódod {siteTitle} oldalhoz",
     "Hey there,": "Szia!",
     "Hey there!": "Szia!",
     "If you did not make this request, you can safely ignore this email.": "Ha nem te kezdeményezted ezt a kérést, akkor nyugodtan hagyd figyelmen kívül ezt a levelet.",
