--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -56,7 +56,7 @@
     "Didn't mean to do this? Manage your preferences <button>here</button>.": "Нямахте това предвид? Управлявайте предпочитанията си <button>тук</button>.",
     "Don't have an account?": "Нямате личен профил?",
     "Edit": "Промяна",
-    "Email": "Имейл адрес",
+    "Email": "Имейл",
     "Email newsletter": "Имейл бюлетин",
     "Email newsletter settings updated": "Настройките за бюлетини са обновени",
     "Email preferences": "Имейл настройки ",
