--- a/ghost/i18n/locales/bg/ghost.json
+++ b/ghost/i18n/locales/bg/ghost.json
@@ -8,9 +8,9 @@
     "Complete your sign up to {siteTitle}!": "Завършете регистрацията си в {siteTitle}!",
     "complimentary": "подарен",
     "Confirm email address": "Потвърдете имейл адреса",
-    "Confirm signup": "Потвърдете регистрация",
+    "Confirm signup": "Потвърдете регистрацията",
     "Confirm your email address": "Потвърдете имейл адреса си",
-    "Confirm your email update for {siteTitle}!": "Потвърдете промяна на имейл адреса си за {siteTitle}!",
+    "Confirm your email update for {siteTitle}!": "Потвърдете промяната на имейл адреса си за {siteTitle}!",
     "Confirm your subscription to {siteTitle}": "Потвърдете абонамента си за {siteTitle}",
     "Device:": "Устройство:",
     "Email": "Имейл",
