--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -27,12 +27,12 @@
     "Cancel anytime.": "Отказване по всяко време.",
     "Cancel subscription": "Откажи абонамент",
     "Cancellation reason": "Причина за отказ",
-    "Change": "Промени",
+    "Change": "Промяна",
     "Change plan": "Промени плана",
     "Check spam & promotions folders": "Проверете папките за спам и промоции",
     "Check with your mail provider": "Уведомете своя доставчик на електронна поща",
     "Check your inbox to verify email update": "Влезте в пощата си и потвърдете промяната на адреса",
-    "Choose": "Избери",
+    "Choose": "Избор",
     "Choose a different plan": "Изберете друг план",
     "Choose a plan": "Изберете план",
     "Choose your newsletters": "Изберете бюлетини",
@@ -52,17 +52,17 @@
     "Could not update email! Invalid link.": "Не успяхме да обновим имейла! Невалиден линк.",
     "Create a new contact": "Създайте нов контакт",
     "Current plan": "Текущ план",
-    "Delete account": "Изтрий профил",
+    "Delete account": "Изтрий профила",
     "Didn't mean to do this? Manage your preferences <button>here</button>.": "Нямахте това предвид? Управлявайте предпочитанията си <button>тук</button>.",
-    "Don't have an account?": "Нямате личен профил?",
+    "Don't have an account?": "Нямате свой профил?",
     "Edit": "Промяна",
     "Email": "Имейл",
     "Email newsletter": "Имейл бюлетин",
     "Email newsletter settings updated": "Настройките за бюлетини са обновени",
-    "Email preferences": "Имейл настройки ",
+    "Email preferences": "Имейл настройки",
     "Email preferences updated.": "Настройките за имейл са обновени.",
-    "Emails": "Имейли",
-    "Emails disabled": "Писмата са спрени",
+    "Emails": "Бюлетини",
+    "Emails disabled": "Имейлите са спрени",
     "Ends {offerEndDate}": "До {offerEndDate}",
     "Enter your email address": "Попълнете вашия имейл адрес",
     "Enter your name": "Попълнете вашето име",
@@ -85,7 +85,7 @@
     "Get help": "Потърсете помощ",
     "Get in touch for help": "Свържете се за помощ",
     "Get notified when someone replies to your comment": "Получаване на известия, ако някой отговори на Ваш коментар",
-    "Give feedback on this post": "Вашият отзив за публикацията",
+    "Give feedback on this post": "Дайте отзив за публикацията",
     "Help! I'm not receiving emails": "Помощ! Не получавам имейли",
     "Here are a few other sites you may enjoy.": "Други сайтове, които може да харесате.",
     "If a newsletter is flagged as spam, emails are automatically disabled for that address to make sure you no longer receive any unwanted messages.": "Ако даден бюлетин бъде отбелязан като спам, имейлите към този адрес се деактивират автоматично, за да е сигурно, че няма да получавате нежелани съобщения.",
@@ -130,7 +130,7 @@
     "Recommendations": "Препоръки",
     "Renews at {price}.": "Подновяване за {price}.",
     "Retry": "Отново",
-    "Save": "Запиши",
+    "Save": "Запис",
     "Send an email and say hi!": "Изпратете имейл за здрасти!",
     "Send an email to {senderEmail} and say hello. This can also help signal to your mail provider that emails to and from this address should be trusted.": "Изпратете имейл до {senderEmail} за здрасти. Това също може да сигнализира на вашия доставчик на електронна поща, че на имейлите до и от този адрес може да се има доверие.",
     "Sending login link...": "Изпращане на линк за влизане...",
@@ -148,7 +148,7 @@
     "Start {amount}-day free trial": "Започване на {amount}-дневен безплатен достъп",
     "Starting {startDate}": "Започва на {startDate}",
     "Starting today": "Стартира днес",
-    "Submit feedback": "Изпрати отзив",
+    "Submit feedback": "Обратна връзка",
     "Subscribe": "Абонамент",
     "Subscribed": "Абониран",
     "Subscription plan updated successfully": "Абонаментният план е актуализиран успешно",
@@ -169,7 +169,7 @@
     "There was an error processing your payment. Please try again.": "Възникна грешка при обработката на вашето плащане. Моля, опитайте отново.",
     "There was an error sending the email, please try again": "Възникна грешка при изпращане на имейл, опитайте отново",
     "This site is invite-only, contact the owner for access.": "Сайтът е само с покани. Свържете се със собственика, за да получите достъп.",
-    "This site is not accepting donations at the moment.": "",
+    "This site is not accepting donations at the moment.": "В момента сайтът не приема дарения.",
     "This site is not accepting payments at the moment.": "В момента сайтът не приема плащания.",
     "This site only accepts paid members.": "Този сайт приема само плащащи потребители.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "За да завършите регистрацията използвайте линка, който ще получите по имейл. Ако не пристигне до 3 минути, проверете дали не е в папката за спам.",
@@ -184,12 +184,12 @@
     "Try free for {amount} days, then {originalPrice}.": "Тествайте безплатно за {amount} дни, след това {originalPrice}.",
     "Unable to initiate checkout session": "Невъзможност за започване на сесия за плащане",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Отключете достъпа до всички бюлетини, като станете плащащ абонат.",
-    "Unsubscribe from all emails": "Прекрати изпращането на всякакви писма",
+    "Unsubscribe from all emails": "Прекратяване на всякакви имейли",
     "Unsubscribed": "Отписан",
-    "Unsubscribed from all emails.": "Отписване от всички имейли.",
-     "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на писма няма да прекрати платения Ви абонамент за {title}",
+    "Unsubscribed from all emails.": "Всякакви имейли са спрени.",
+    "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на имейли няма да прекрати платения Ви абонамент за {title}",
     "Update": "Обнови",
-    "Update your preferences": "Промяна на настройките ви",
+    "Update your preferences": "Промяна на настройките",
     "Verification link sent, check your inbox": "Изпратен е линк за проверка, проверете имейла си",
     "Verify your email address is correct": "Проверете дали имейл адресът ви е верен",
     "View plans": "Вижте плановете",
@@ -197,7 +197,7 @@
     "Welcome back, {name}!": "Здравейте отново, {name}!",
     "Welcome back!": "Добре дошли отново!",
     "Welcome to {siteTitle}": "Добре дошли в {siteTitle}",
-    "When an inbox fails to accept an email it is commonly called a bounce. In many cases, this can be temporary. However, in some cases, a bounced email can be returned as a permanent failure when an email address is invalid or non-existent.": "Когато дадена пощенска кутия не успее да приеме имейл, това обикновено се нарича отказ. В много случаи това е временно. В някои случаи обаче имейлът може да бъде отхвърлян постоянно, например когато адресът е невалиден или не съществува.",
+    "When an inbox fails to accept an email it is commonly called a bounce. In many cases, this can be temporary. However, in some cases, a bounced email can be returned as a permanent failure when an email address is invalid or non-existent.": "Когато даден имейл сървър не успее да приеме писмо, това обикновено се нарича отказ. В много случаи това е временно. В някои случаи обаче имейлът може да бъде отхвърлян постоянно, например когато адресът е невалиден или не съществува.",
     "Why has my email been disabled?": "Защо имейлът ми е деактивиран?",
     "year": "година",
     "Yearly": "Годишно",
@@ -205,7 +205,7 @@
     "You have been successfully resubscribed": "Абонаментът беше успешно подновен",
     "You're currently not receiving emails": "Понастоящем не получавате имейли",
     "You're not receiving emails": "Не получавате имейли",
-    "You're not receiving emails because you either marked a recent message as spam, or because messages could not be delivered to your provided email address.": "Не получавате имейли, защото или пощенският адрес е невалиден, или писмата се класифицират като нежелана поща.",
+    "You're not receiving emails because you either marked a recent message as spam, or because messages could not be delivered to your provided email address.": "Не получавате имейли, защото или адресът ви е невалиден, или писмата се класифицират като нежелана поща.",
     "You've successfully signed in.": "Влязохте успешно.",
     "You've successfully subscribed to": "Успешно се абонирахте за",
     "Your account": "Вашият профил",
