Consistent translation of account in Bulgarian

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -91,11 +91,11 @@
     "If a newsletter is flagged as spam, emails are automatically disabled for that address to make sure you no longer receive any unwanted messages.": "Ако даден бюлетин бъде отбелязан като спам, имейлите към този адрес се деактивират автоматично, за да е сигурно, че няма да получавате нежелани съобщения.",
     "If the spam complaint was accidental, or you would like to begin receiving emails again, you can resubscribe to emails by clicking the button on the previous screen.": "Ако оплакването за спам е било случайно или искате отново да получавате имейли, можете да активирате това, като кликнете върху бутона на предишния екран.",
     "If you cancel your subscription now, you will continue to have access until {periodEnd}.": "Ако отмените абонамента си сега, ще продължавате да имате достъп до {periodEnd}.",
-    "If you have a corporate or government email account, reach out to your IT department and ask them to allow emails to be received from {senderEmail}": "Ако имате корпоративен или правителствен имейл акаунт, обърнете се към ИТ отдела си и ги помолете да разрешат получаването на имейли от {senderEmail}.",
+    "If you have a corporate or government email account, reach out to your IT department and ask them to allow emails to be received from {senderEmail}": "Ако имате корпоративен или правителствен имейл адрес, обърнете се към ИТ отдела си и ги помолете да разрешат получаването на имейли от {senderEmail}.",
     "If you would like to start receiving emails again, the best next steps are to check your email address on file for any issues and then click resubscribe on the previous screen.": "Ако искате отново да получавате имейли, най-добре е да проверите дали няма някакви проблеми с имейл адреса Ви и след това да щракнете върху повторно абониране на предишния екран.",
     "If you're not receiving the email newsletter you've subscribed to, here are a few things to check.": "Ако не получавате имейл бюлетина, за който сте се абонирали, ето няколко неща, които можете да проверите.",
     "If you've completed all these checks and you're still not receiving emails, you can reach out to get support by contacting {supportAddress}.": "Ако сте извършили всички тези проверки и все още не получавате имейли, можете да се свържете с поддръжката на {supportAddress}.",
-    "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "В случай че при опит за изпращане на бюлетин се получава някакъв постоянен проблем, имейлите ще бъдат деактивирани в акаунта.",
+    "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "В случай че при опит за изпращане на бюлетин се получава някакъв постоянен проблем, имейлите ще бъдат деактивирани за вашия адрес.",
     "In your email client add {senderEmail} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": "Добавете {senderEmail} в списъка си с контакти. Това информира вашия доставчик, че имейлите, изпратени от този адрес, са надеждни.",
     "Invalid email address": "Невалиден имейл адрес",
     "Jamie Larson": "Петър Петров",
@@ -111,7 +111,7 @@
     "More like this": "Повече такива",
     "Name": "Име",
     "Need more help? Contact support": "Още имате нужда от помощ? Потърсете поддръжката",
-    "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Бюлетините може да бъдат деактивирани в профила ви по две причини: предишен имейл е бил маркиран като спам или опитът за изпращане на имейл е довел до траен неуспех (отказ).",
+    "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Бюлетините могат да бъдат деактивирани в профила ви по две причини: предишен имейл е бил маркиран като спам или опитът за изпращане на имейл е довел до траен неуспех (отказ).",
     "No member exists with this e-mail address.": "Няма абонат с такъв имейл адрес.",
     "No member exists with this e-mail address. Please sign up first.": "Няма абонат с такъв имейл адрес. Моля, първо се регистрирайте.",
     "Not receiving emails?": "Не получавате поща?",
@@ -154,7 +154,7 @@
     "Subscription plan updated successfully": "Абонаментният план е актуализиран успешно",
     "Success": "Чудесно",
     "Success! Check your email for magic link to sign-in.": "Чудесно! Проверете имейла си за своя магически линк за влизане.",
-    "Success! Your account is fully activated, you now have access to all content.": "Чудесно! Вашият акаунт е активиран и вече имате достъп до цялото съдържание.",
+    "Success! Your account is fully activated, you now have access to all content.": "Чудесно! Вашият профил е активиран и вече имате достъп до цялото съдържание.",
     "Success! Your email is updated.": "Чудесно! Вашият имейл е актуализиран.",
     "Successfully unsubscribed": "Успешно отписване",
     "Thank you for subscribing. Before you start reading, below are a few other sites you may enjoy.": "Благодарим ви за абонамента. Преди да започнете да четете, още няколко сайта, които може да ви харесат.",
