Aligning with CodeRabbit remarks

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -27,12 +27,12 @@
     "Cancel anytime.": "Отказване по всяко време.",
     "Cancel subscription": "Откажи абонамент",
     "Cancellation reason": "Причина за отказ",
-    "Change": "Промяна",
+    "Change": "Промени",
     "Change plan": "Промени плана",
     "Check spam & promotions folders": "Проверете папките за спам и промоции",
-    "Check with your mail provider": "Уведомете своя доставчик на електронна поща",
+    "Check with your mail provider": "Свържете се със своя доставчик на електронна поща",
     "Check your inbox to verify email update": "Влезте в пощата си и потвърдете промяната на адреса",
-    "Choose": "Избор",
+    "Choose": "Изберете",
     "Choose a different plan": "Изберете друг план",
     "Choose a plan": "Изберете план",
     "Choose your newsletters": "Изберете бюлетини",
@@ -48,7 +48,7 @@
     "Continue": "Продължи",
     "Continue subscription": "Продължете абонамента",
     "Could not create stripe checkout session": "Неуспешен опит за платежна сесия чрез Stripe",
-    "Could not sign in. Login link expired.": "Не можете да влезете. Линкът е изветрял.",
+    "Could not sign in. Login link expired.": "Не можете да влезете. Линкът е изтекъл.",
     "Could not update email! Invalid link.": "Не успяхме да обновим имейла! Невалиден линк.",
     "Create a new contact": "Създайте нов контакт",
     "Current plan": "Текущ план",
@@ -59,9 +59,9 @@
     "Email": "Имейл",
     "Email newsletter": "Имейл бюлетин",
     "Email newsletter settings updated": "Настройките за бюлетини са обновени",
-    "Email preferences": "Имейл настройки",
+    "Email preferences": "Настройки за имейл",
     "Email preferences updated.": "Настройките за имейл са обновени.",
-    "Emails": "Бюлетини",
+    "Emails": "Имейли",
     "Emails disabled": "Имейлите са спрени",
     "Ends {offerEndDate}": "До {offerEndDate}",
     "Enter your email address": "Попълнете вашия имейл адрес",
@@ -84,7 +84,7 @@
     "Free Trial – Ends {trialEnd}": "Безплатен тест – до {trialEnd}",
     "Get help": "Потърсете помощ",
     "Get in touch for help": "Свържете се за помощ",
-    "Get notified when someone replies to your comment": "Получаване на известия, ако някой отговори на Ваш коментар",
+    "Get notified when someone replies to your comment": "Получавайте известия, ако някой отговори на Ваш коментар",
     "Give feedback on this post": "Дайте отзив за публикацията",
     "Help! I'm not receiving emails": "Помощ! Не получавам имейли",
     "Here are a few other sites you may enjoy.": "Други сайтове, които може да харесате.",
@@ -145,7 +145,7 @@
     "Sorry, no recommendations are available right now.": "За жалост, в момента няма налични препоръки.",
     "Sorry, that didn’t work.": "Жалко, така не се получава.",
     "Spam complaints": "Оплаквания от спам",
-    "Start {amount}-day free trial": "Започване на {amount}-дневен безплатен достъп",
+    "Start {amount}-day free trial": "Започнете {amount}-дневен безплатен достъп",
     "Starting {startDate}": "Започва на {startDate}",
     "Starting today": "Стартира днес",
     "Submit feedback": "Обратна връзка",
@@ -189,7 +189,7 @@
     "Unsubscribed from all emails.": "Всякакви имейли са спрени.",
     "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на имейли няма да прекрати платения Ви абонамент за {title}",
     "Update": "Обнови",
-    "Update your preferences": "Промяна на настройките",
+    "Update your preferences": "Променете настройките",
     "Verification link sent, check your inbox": "Изпратен е линк за проверка, проверете имейла си",
     "Verify your email address is correct": "Проверете дали имейл адресът ви е верен",
     "View plans": "Вижте плановете",
