Ready for review

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -48,7 +48,7 @@
     "Continue": "Продължи",
     "Continue subscription": "Продължете абонамента",
     "Could not create stripe checkout session": "Неуспешен опит за платежна сесия чрез Stripe",
-    "Could not sign in. Login link expired.": "Не можете да влезете. Линкът е изтекъл.",
+    "Could not sign in. Login link expired.": "Не можете да влезете. Линкът е изветрял.",
     "Could not update email! Invalid link.": "Не успяхме да обновим имейла! Невалиден линк.",
     "Create a new contact": "Създайте нов контакт",
     "Current plan": "Текущ план",
@@ -61,7 +61,7 @@
     "Email newsletter settings updated": "Настройките за бюлетини са обновени",
     "Email preferences": "Настройки за имейл",
     "Email preferences updated.": "Настройките за имейл са обновени.",
-    "Emails": "Имейли",
+    "Emails": "Бюлетини",
     "Emails disabled": "Имейлите са спрени",
     "Ends {offerEndDate}": "До {offerEndDate}",
     "Enter your email address": "Попълнете вашия имейл адрес",
