--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -184,7 +184,7 @@
     "Try free for {amount} days, then {originalPrice}.": "Тествайте безплатно за {amount} дни, след това {originalPrice}.",
     "Unable to initiate checkout session": "Невъзможност за започване на сесия за плащане",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Отключете достъпа до всички бюлетини, като станете плащащ абонат.",
-    "Unsubscribe from all emails": "Прекратяване на всякакви имейли",
+    "Unsubscribe from all emails": "Отпишете се от всички имейли",
     "Unsubscribed": "Отписан",
     "Unsubscribed from all emails.": "Всякакви имейли са спрени.",
     "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на имейли няма да прекрати платения Ви абонамент за {title}",
