--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -130,7 +130,7 @@
     "Recommendations": "Препоръки",
     "Renews at {price}.": "Подновяване за {price}.",
     "Retry": "Отново",
-    "Save": "Запис",
+    "Save": "Запази",
     "Send an email and say hi!": "Изпратете имейл за здрасти!",
     "Send an email to {senderEmail} and say hello. This can also help signal to your mail provider that emails to and from this address should be trusted.": "Изпратете имейл до {senderEmail} за здрасти. Това също може да сигнализира на вашия доставчик на електронна поща, че на имейлите до и от този адрес може да се има доверие.",
     "Sending login link...": "Изпращане на линк за влизане...",
@@ -148,7 +148,7 @@
     "Start {amount}-day free trial": "Започнете {amount}-дневен безплатен достъп",
     "Starting {startDate}": "Започва на {startDate}",
     "Starting today": "Стартира днес",
-    "Submit feedback": "Обратна връзка",
+    "Submit feedback": "Изпратете отзив",
     "Subscribe": "Абонамент",
     "Subscribed": "Абониран",
     "Subscription plan updated successfully": "Абонаментният план е актуализиран успешно",
@@ -161,8 +161,8 @@
     "Thank you for your support": "Благодарности за подкрепата ви",
     "Thank you for your support!": "Благодарности за подкрепата ви!",
     "Thanks for the feedback!": "Благодарности за обратната връзка!",
-    "That didn't go to plan": "Не се получи както трябваше",
-    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "Имейлът, с който сте регистриран е {memberEmail} - ако не е верен, актуализирайте го в <button>настройките на профила</button> си.",
+    "That didn't go to plan": "Не се получи както трябва",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "Имейлът, с който сте регистрирани, е {memberEmail} — ако това не е вярно, актуализирайте го в <button>настройките на профила си</button>.",
     "There was a problem submitting your feedback. Please try again a little later.": "Имаше проблем при изпращането на обратната връзка. Моля, опитайте отново малко по-късно.",
     "There was an error cancelling your subscription, please try again.": "Възникна грешка при отмяната на абонамента ви, опитайте отново.",
     "There was an error continuing your subscription, please try again.": "Възникна грешка при продължаването на абонамента ви, опитайте отново.",
@@ -186,7 +186,7 @@
     "Unlock access to all newsletters by becoming a paid subscriber.": "Отключете достъпа до всички бюлетини, като станете плащащ абонат.",
     "Unsubscribe from all emails": "Отпишете се от всички имейли",
     "Unsubscribed": "Отписан",
-    "Unsubscribed from all emails.": "Всякакви имейли са спрени.",
+    "Unsubscribed from all emails.": "Спрели сте всякакви имейли.",
     "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на имейли няма да прекрати платения Ви абонамент за {title}",
     "Update": "Обнови",
     "Update your preferences": "Променете настройките",
