Additional changes after CodeRabbit remarks

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -193,7 +193,7 @@
     "Verification link sent, check your inbox": "Изпратен е линк за проверка, проверете имейла си",
     "Verify your email address is correct": "Проверете дали имейл адресът ви е верен",
     "View plans": "Вижте плановете",
-    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Този имейл адрес, който се опитвате да отпишете, изглежда невалиден. Моля, свържете се със собственика на сайта.",
+    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Невъзможно е да отпишем този имейл адрес, тъй като не беше намерен. Моля, свържете се със собственика на сайта.",
     "Welcome back, {name}!": "Здравейте отново, {name}!",
     "Welcome back!": "Добре дошли отново!",
     "Welcome to {siteTitle}": "Добре дошли в {siteTitle}",
@@ -205,7 +205,7 @@
     "You have been successfully resubscribed": "Абонаментът беше успешно подновен",
     "You're currently not receiving emails": "Понастоящем не получавате имейли",
     "You're not receiving emails": "Не получавате имейли",
-    "You're not receiving emails because you either marked a recent message as spam, or because messages could not be delivered to your provided email address.": "Не получавате имейли, защото или адресът ви е невалиден, или писмата се класифицират като нежелана поща.",
+    "You're not receiving emails because you either marked a recent message as spam, or because messages could not be delivered to your provided email address.": "Не получавате имейли, защото или наскоро сте маркирали някое съобщение като спам, или писмата не могат да бъдат доставени до вашия имейл адрес.",
     "You've successfully signed in.": "Влязохте успешно.",
     "You've successfully subscribed to": "Успешно се абонирахте за",
     "Your account": "Вашият профил",
