--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -52,7 +52,7 @@
     "Could not update email! Invalid link.": "Не успяхме да обновим имейла! Невалиден линк.",
     "Create a new contact": "Създайте нов контакт",
     "Current plan": "Текущ план",
-    "Delete account": "Изтрий профила",
+    "Delete account": "Изтрийте профила",
     "Didn't mean to do this? Manage your preferences <button>here</button>.": "Нямахте това предвид? Управлявайте предпочитанията си <button>тук</button>.",
     "Don't have an account?": "Нямате свой профил?",
     "Edit": "Промяна",
