--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -17,7 +17,7 @@
     "Account settings": "Настройки на профила",
     "Add a personal note": "Добавяне на лична бележка",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "След приключване на безплатния период ще бъдете таксувани според обявените цени. Можете да се откажете преди изтичането на безплатния период.",
-    "Already a member?": "Вече имате регистрация?",
+    "Already a member?": "Вече имате профил?",
     "An error occurred": "Възникна грешка",
     "An unexpected error occured. Please try again or <a>contact support</a> if the error persists.": "Възникна неочаквана грешка. Моля, опитайте отново или <a>потърсете поддръжката</a> ако това се повтаря.",
     "Back": "Обратно",
