--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -62,7 +62,7 @@
     "Email preferences": "Настройки за имейл",
     "Email preferences updated.": "Настройките за имейл са обновени.",
     "Emails": "Бюлетини",
-    "Emails disabled": "Имейлите са спрени",
+    "Emails disabled": "Бюлетините са спрени",
     "Ends {offerEndDate}": "До {offerEndDate}",
     "Enter your email address": "Попълнете вашия имейл адрес",
     "Enter your name": "Попълнете вашето име",
