Ready for review/merge (I hope) :)

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -187,7 +187,7 @@
     "Unsubscribe from all emails": "Отпишете се от всички имейли",
     "Unsubscribed": "Отписан",
     "Unsubscribed from all emails.": "Спрели сте всякакви имейли.",
-    "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на изпращането на имейли няма да прекрати платения Ви абонамент за {title}",
+    "Unsubscribing from emails will not cancel your paid subscription to {title}": "Спирането на имейлите няма да прекрати платения Ви абонамент за {title}",
     "Update": "Обнови",
     "Update your preferences": "Променете настройките",
     "Verification link sent, check your inbox": "Изпратен е линк за проверка, проверете имейла си",
