Back to имейли instead of бюлетини

--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -61,10 +61,10 @@
     "Email newsletter settings updated": "Настройките за бюлетини са обновени",
     "Email preferences": "Настройки за имейл",
     "Email preferences updated.": "Настройките за имейл са обновени.",
-    "Emails": "Бюлетини",
-    "Emails disabled": "Бюлетините са спрени",
+    "Emails": "Имейли",
+    "Emails disabled": "Имейлите са спрени",
     "Ends {offerEndDate}": "До {offerEndDate}",
-    "Enter your email address": "Попълнете вашия имейл адрес",
+    "Enter your email address": "Попълнете своя имейл адрес",
     "Enter your name": "Попълнете вашето име",
     "Error": "Грешка",
     "Expires {expiryDate}": "Изтича {expiryDate}",
