--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -84,7 +84,7 @@
     "Free Trial – Ends {trialEnd}": "Безплатен тест – до {trialEnd}",
     "Get help": "Потърсете помощ",
     "Get in touch for help": "Свържете се за помощ",
-    "Get notified when someone replies to your comment": "Получавайте известия, ако някой отговори на Ваш коментар",
+    "Get notified when someone replies to your comment": "Получавайте известия, ако някой отговори на вашия коментар",
     "Give feedback on this post": "Дайте отзив за публикацията",
     "Help! I'm not receiving emails": "Помощ! Не получавам имейли",
     "Here are a few other sites you may enjoy.": "Други сайтове, които може да харесате.",
