--- a/ghost/i18n/locales/es/portal.json
+++ b/ghost/i18n/locales/es/portal.json
@@ -69,7 +69,7 @@
     "Error": "Error",
     "Expires {expiryDate}": "Expira el {expiryDate}",
     "Failed to cancel subscription, please try again": "Fallo al cancelar tu suscripción, inténtalo de nuevo por favor",
-    "Failed to log in, please try again": "Fallo al inciar sesión, inténtalo de nuevo por favor",
+    "Failed to log in, please try again": "Fallo al iniciar sesión, inténtalo de nuevo por favor",
     "Failed to log out, please try again": "Fallo al cerrar sesión, inténtalo de nuevo por favor",
     "Failed to process checkout, please try again": "Fallo al procesar el pago, inténtalo de nuevo por favor",
     "Failed to send magic link email": "Fallo al enviar el link mágico para iniciar sesión",
@@ -88,7 +88,7 @@
     "Give feedback on this post": "Envía comentarios sobre esta publicación",
     "Help! I'm not receiving emails": "¡Ayuda! No estoy recibiendo correos electrónicos",
     "Here are a few other sites you may enjoy.": "Aquí hay otros sitios que te pueden gustar.",
-    "If a newsletter is flagged as spam, emails are automatically disabled for that address to make sure you no longer receive any unwanted messages.": "Si un correo se clasifica como spam, los correos electrónicos son automáticamente deshabilitados para esa dirección de correo para asegurarse que usted no reciba ningún correo indeseado.",
+    "If a newsletter is flagged as spam, emails are automatically disabled for that address to make sure you no longer receive any unwanted messages.": "Si un boletín se clasifica como spam, los correos electrónicos son automáticamente deshabilitados para esa dirección de correo para asegurarse que usted no reciba ningún correo indeseado.",
     "If the spam complaint was accidental, or you would like to begin receiving emails again, you can resubscribe to emails by clicking the button on the previous screen.": "Si la denuncia de spam fue accidental, o si quiere recibir los correos electrónicos de nuevo, puede volver a suscribirse a los correos haciendo click en el botón de la pantalla anterior.",
     "If you cancel your subscription now, you will continue to have access until {periodEnd}.": "Si cancelas tu suscripción ahora, continuarás con acceso hasta el {periodEnd}.",
     "If you have a corporate or government email account, reach out to your IT department and ask them to allow emails to be received from {senderEmail}": "Si tienes un correo electrónico corporativo o del gobierno, puedes comunicarte con el departamento de TI y solicitar que te permitan recibir correos de {senderEmail}",
@@ -104,21 +104,21 @@
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Asegúrate de que los correos electrónicos no terminen accidentalmente en las carpetas de correo no deseado o promociones de su bandeja de entrada. Si lo son, haz clic en \"Marcar como no spam\" y/o \"Mover a la bandeja de entrada\".",
     "Manage": "Administrar",
     "Maybe later": "Tal vez más tarde",
-    "Memberships from this email domain are currently restricted.": "La membresía desde este dominio está actualmente restringida.",
-    "Memberships unavailable, contact the owner for access.": "Membresía no disponible, contacta al propietario para obtener acceso.",
+    "Memberships from this email domain are currently restricted.": "Las membresías desde este dominio están actualmente restringidas.",
+    "Memberships unavailable, contact the owner for access.": "Membresías no disponibles, contacta al propietario para obtener acceso.",
     "month": "mes",
     "Monthly": "Mensual",
     "More like this": "Más como esto",
     "Name": "Nombre",
     "Need more help? Contact support": "¿Necesitas más ayuda? Contacta con soporte técnico.",
     "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Los boletines se pueden deshabilitar en tu cuenta por dos razones: Un correo electrónico anterior se marcó como correo no deseado o el intento de enviar un correo electrónico resultó en un fallo permanente (bounce).",
-    "No member exists with this e-mail address.": "No existe un miembro con éste correo electrónico",
-    "No member exists with this e-mail address. Please sign up first.": "No existe un miembro con este correo electrónico. Por favor registrate primero.",
+    "No member exists with this e-mail address.": "No existe un miembro con este correo electrónico",
+    "No member exists with this e-mail address. Please sign up first.": "No existe un miembro con este correo electrónico. Por favor regístrate primero.",
     "Not receiving emails?": "¿No recibes correos electrónicos?",
     "Now check your email!": "¡Ahora revisa tu correo electrónico!",
     "Once resubscribed, if you still don't see emails in your inbox, check your spam folder. Some inbox providers keep a record of previous spam complaints and will continue to flag emails. If this happens, mark the latest newsletter as 'Not spam' to move it back to your primary inbox.": "Una vez que te hayas vuelto a suscribir, si aún no ves los correos electrónicos en tu bandeja de entrada, verifica tu carpeta de spam. Algunos proveedores de correo mantienen un registro de quejas de spam anteriores y continuarán marcando los correos electrónicos. Si esto sucede, marca el último boletín como \"No es spam\" para moverlo nuevamente a tu bandeja de entrada principal.",
     "Permanent failure (bounce)": "Fallo permanente (bounce)",
-    "Phone number": "Número de telefóno",
+    "Phone number": "Número de teléfono",
     "Plan": "Plan",
     "Plan checkout was cancelled.": "El pago del plan fue cancelado.",
     "Plan upgrade was cancelled.": "La actualización del plan fue cancelada.",
@@ -141,11 +141,11 @@
     "Sign up": "Registrarse",
     "Signup error: Invalid link": "Error de registro: Enlace no válido",
     "Signups from this email domain are currently restricted.": "Los registros desde este dominio están actualmente restringidos.",
-    "Something went wrong, please try again later.": "Algo salió mál, inténtalo de nuevo mas tarde.",
+    "Something went wrong, please try again later.": "Algo salió mal, inténtalo de nuevo más tarde.",
     "Sorry, no recommendations are available right now.": "Lo sentimos, no tenemos recomendaciones en este momento",
     "Sorry, that didn’t work.": "Lo siento, eso no funcionó.",
     "Spam complaints": "Quejas de spam",
-    "Start {amount}-day free trial": "Comenzar mi prueba gratuita de {amount} días",
+    "Start {amount}-day free trial": "Empezar una prueba gratuita de {amount} días",
     "Starting {startDate}": "A partir de {startDate}",
     "Starting today": "A partir de hoy",
     "Submit feedback": "Enviar comentarios",
@@ -166,14 +166,14 @@
     "There was a problem submitting your feedback. Please try again a little later.": "Hubo un problema al enviar tus comentarios. Vuelve a intentarlo un poco más tarde.",
     "There was an error cancelling your subscription, please try again.": "Hubo un error cancelando la suscripción, inténtalo de nuevo por favor.",
     "There was an error continuing your subscription, please try again.": "Hubo un error en continuar la suscripción, inténtalo de nuevo por favor.",
-    "There was an error processing your payment. Please try again.": "Hubo un error procesando tu pago. Inténtalo de nuevvo por favor.",
+    "There was an error processing your payment. Please try again.": "Hubo un error procesando tu pago. Inténtalo de nuevo por favor.",
     "There was an error sending the email, please try again": "Hubo un error enviando el correo electrónico, inténtalo de nuevo por favor.",
     "This site is invite-only, contact the owner for access.": "A este sitio solo se puede acceder por invitación, contacta con el propietario para obtener acceso.",
     "This site is not accepting donations at the moment.": "Este sitio no acepta donaciones en este momento.",
     "This site is not accepting payments at the moment.": "Este sitio no acepta pagos en este momento.",
     "This site only accepts paid members.": "Este sitio es sólo para miembros de pago.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Para completar el registro, haz clic en el enlace de confirmación en tu correo electrónico. Si no llega en 3 minutos, ¡revisa tu carpeta de spam!",
-    "To continue to stay up to date, subscribe to {publication} below.": "Para mantenerte actualizado, suscribete a la {publication} justo abajo.",
+    "To continue to stay up to date, subscribe to {publication} below.": "Para mantenerte actualizado, suscríbete a la {publication} justo abajo.",
     "Too many attempts try again in {number} days.": "Has alcanzado el límite de intentos en {number} días.",
     "Too many attempts try again in {number} hours.": "Has alcanzado el límite de intentos en {number} horas.",
     "Too many attempts try again in {number} minutes.": "Has alcanzado el límite de intentos en {number} minutos.",
@@ -209,7 +209,7 @@
     "You've successfully signed in.": "Has iniciado sesión correctamente.",
     "You've successfully subscribed to": "Te has suscrito correctamente a",
     "Your account": "Tu cuenta",
-    "Your email has failed to resubscribe, please try again": "Tu correo electrónico ha fallado para volver a suscribirse, intentalo de nuevo por favor",
+    "Your email has failed to resubscribe, please try again": "No se ha podido volver a suscribir tu correo electrónico, inténtalo de nuevo por favor",
     "Your input helps shape what gets published.": "Tu opinión ayuda a definir lo que se publica.",
     "Your subscription will expire on {expiryDate}": "Tu suscripción caducará el {expiryDate} ",
     "Your subscription will renew on {renewalDate}": "Tu suscripción se renovará el {renewalDate}",
