🌐 Updated Vietnamese translations for Comments, Ghost, and Portal (#23508)
no issue

--- a/ghost/i18n/locales/vi/comments.json
+++ b/ghost/i18n/locales/vi/comments.json
@@ -8,7 +8,7 @@
     "Add comment": "Thêm bình luận",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Thêm ngữ cảnh, tên và chuyên môn của bạn để thúc đẩy cuộc thảo luận lành mạnh.",
     "Add reply": "Trả lời",
-    "Add your expertise": "",
+    "Add your expertise": "Thêm chuyên môn của bạn",
     "Already a member?": "Đã là thành viên?",
     "Anonymous": "Ẩn danh",
     "Are you sure?": "Bạn có chắc không?",
@@ -19,7 +19,7 @@
     "Comment": "Bình luận",
     "Complete your profile": "Hoàn tất hồ sơ của bạn",
     "Delete": "Xóa",
-    "Deleted": "Đã xoá",
+    "Deleted": "Đã xóa",
     "Deleted member": "Thành viên đã xóa",
     "Deleting": "Đang xóa",
     "Discussion": "Thảo luận",
@@ -59,9 +59,9 @@
     "Sending": "Đang gửi",
     "Sent": "Đã gửi",
     "Show": "Hiển thị",
-    "Show {amount} more replies": "Xem {amount} trả lời khác",
-    "Show 1 more reply": "Xem 1 trả lời",
-    "Show comment": "Đọc bình luận",
+    "Show {amount} more replies": "Xem thêm {amount} trả lời khác",
+    "Show 1 more reply": "Xem thêm 1 trả lời",
+    "Show comment": "Xem bình luận",
     "Sign in": "Đăng nhập",
     "Sign up now": "Đăng ký ngay",
     "Sort by": "Xếp theo",
