--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -11,7 +11,7 @@
     "{memberEmail} will no longer receive this newsletter.": "{memberEmail} sẽ không còn được nhận bản tin này.",
     "{trialDays} days free": "{trialDays} ngày đọc thử miễn phí",
     "+1 (123) 456-7890": "+84 (987) 654-321",
-    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Liên kết đăng nhập đã được gửi đến email của bạn. Sau 3 phút mà chưa thấy, hãy kiểm tra thư hộp thư spam.",
+    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Liên kết đăng nhập đã được gửi đến email của bạn. Nếu sau 3 phút vẫn chưa thấy, hãy kiểm tra thư hộp thư spam.",
     "Account": "Tài khoản",
     "Account details updated successfully": "Đã cập nhật chi tiết tài khoản thành công",
     "Account settings": "Cài đặt",
@@ -100,7 +100,7 @@
     "Invalid email address": "Địa chỉ email không hợp lệ",
     "Jamie Larson": "Jamie Larson",
     "jamie@example.com": "jamie@example.com",
-    "Less like this": "Không thích lắm",
+    "Less like this": "Gửi ít hơn",
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Hãy chắc rằng email không đang trong hộp thư Spam hoặc Quảng cáo. Nếu đang vậy, chọn \"Đánh dấu không phải spam\" hoặc \"Chuyển tới Hộp thư đến\".",
     "Manage": "Quản lý",
     "Maybe later": "Để sau",
@@ -108,7 +108,7 @@
     "Memberships unavailable, contact the owner for access.": "Chưa phải là thành viên, liên hệ với chủ sở hữu để truy cập.",
     "month": "tháng",
     "Monthly": "Hàng tháng",
-    "More like this": "Thích bài viết như này",
+    "More like this": "Gửi nhiều hơn",
     "Name": "Tên",
     "Need more help? Contact support": "Cần giúp đỡ? Liên hệ hỗ trợ",
     "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Tài khoản của bạn có thể không nhận được bản tin email bởi hai lý do: Email trước đó đã bị đánh dấu là thư rác hoặc lỗi thất bại vĩnh viễn (thư bị trả lại).",
@@ -122,7 +122,7 @@
     "Plan": "Gói thành viên",
     "Plan checkout was cancelled.": "Đã hủy thanh toán gói.",
     "Plan upgrade was cancelled.": "Đã hủy nâng cấp gói.",
-    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên.",
+    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên của bạn.",
     "Please enter {fieldName}": "Hãy nhập {fieldName}",
     "Please fill in required fields": "Vui lòng điền các mục bắt buộc",
     "Price": "Giá gói",
@@ -169,7 +169,7 @@
     "There was an error processing your payment. Please try again.": "Xảy ra lỗi khi tiến hành thanh toán. Hãy thử lại sau.",
     "There was an error sending the email, please try again": "Xảy ra lỗi khi gửi email, vui lòng thử lại",
     "This site is invite-only, contact the owner for access.": "Trang web này chỉ dành cho những người được mời, hãy liên hệ với chủ sở hữu để cấp quyền truy cập.",
-    "This site is not accepting donations at the moment.": "",
+    "This site is not accepting donations at the moment.": "Trang web này hiện chưa nhận quyên góp.",
     "This site is not accepting payments at the moment.": "Trang web này hiện chưa chấp nhận thanh toán.",
     "This site only accepts paid members.": "Trang web này chỉ dành cho thành viên trả phí.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Để hoàn tất đăng ký, nhấn vào liên kết xác nhận được gửi tới email của bạn. Sau 3 phút mà không thấy, hãy kiểm tra hộp thư spam!",
