--- a/ghost/i18n/locales/vi/ghost.json
+++ b/ghost/i18n/locales/vi/ghost.json
@@ -7,9 +7,9 @@
     "Complete signup for {siteTitle}!": "Hoàn tất đăng ký trên {siteTitle}!",
     "Complete your sign up to {siteTitle}!": "Hoàn tất đăng ký của bạn trên {siteTitle}!",
     "complimentary": "trải nghiệm",
-    "Confirm email address": "Xác nhận email",
+    "Confirm email address": "Xác nhận địa chỉ email",
     "Confirm signup": "Xác nhận đăng ký",
-    "Confirm your email address": "Nhập lại email",
+    "Confirm your email address": "Xác nhận địa chỉ email của bạn",
     "Confirm your email update for {siteTitle}!": "Xác nhận cập nhật địa chỉ email của bạn trên {siteTitle}!",
     "Confirm your subscription to {siteTitle}": "Xác nhận bạn sẽ đăng ký {siteTitle}",
     "Device:": "Thiết bị:",
@@ -45,7 +45,7 @@
     "Thank you for subscribing to {siteTitle}. Tap the link below to be automatically signed in:": "Cám ơn bạn đã đăng ký gói thành viên {siteTitle}. Nhấn vào liên kết bên dưới để đăng nhập tự động:",
     "This email address will not be used.": "Địa chỉ email này sẽ không còn sử dụng.",
     "trialing": "đọc thử",
-    "Unsubscribe": "Hủy gói",
+    "Unsubscribe": "Hủy đăng ký",
     "Upgrade": "Nâng cấp",
     "Upgrade to continue reading.": "Nâng cấp để đọc tiếp",
     "View in browser": "Xem bằng trình duyệt",
