Improve translation for "complimentary"

--- a/ghost/i18n/locales/es/portal.json
+++ b/ghost/i18n/locales/es/portal.json
@@ -40,7 +40,7 @@
     "Close": "Cerrar",
     "Comment preferences updated.": "Preferencias de los comentarios actualizadas",
     "Comments": "Comentarios",
-    "Complimentary": "Gratis",
+    "Complimentary": "De cortesía",
     "Confirm": "Confirmar",
     "Confirm cancellation": "Confirmar cancelación",
     "Confirm subscription": "Confirmar suscripción",
@@ -122,7 +122,7 @@
     "Plan": "Plan",
     "Plan checkout was cancelled.": "El pago del plan fue cancelado.",
     "Plan upgrade was cancelled.": "La actualización del plan fue cancelada.",
-    "Please contact {supportAddress} to adjust your complimentary subscription.": "Por favor, ponte en contacto con {supportAddress} para ajustar tu suscripción gratuita.",
+    "Please contact {supportAddress} to adjust your complimentary subscription.": "Por favor, ponte en contacto con {supportAddress} para ajustar tu suscripción de cortesía.",
     "Please enter {fieldName}": "Por favor ingresa {fieldName}",
     "Please fill in required fields": "Por favor rellena los campos requeridos.",
     "Price": "Precio",
